# docker-autotag

./: .dictionary  .drone.jsonnet  .drone.yml  CHANGELOG.md  Containerfile.multiarch  Dockerfile  Dockerfile.multiarch  README.md  manifest.tmpl  pyproject.toml  setup.cfg  setup.py
.chglog/: config.yml
.github/: settings.yml
.woodpecker/: docs.yml
docker/: Dockerfile  Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  manifest-quay.tmpl  manifest.tmpl
dockerautotag/: Cli.py  Logging.py  __init__.py  __main__.py  cli.py  logging.py  utils.py
